[gd_scene load_steps=6 format=2]

[ext_resource path="res://Map Editor/Nations Panel/NationEdit.gd" type="Script" id=1]
[ext_resource path="res://Map Editor/Map Editor Theme.tres" type="Theme" id=2]
[ext_resource path="res://Map Editor/warning.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Tooltip Theme.tres" type="Theme" id=4]
[ext_resource path="res://Map Editor/Map Editor Option Button Theme.tres" type="Theme" id=5]

[node name="Nation Edit" type="VBoxContainer"]
margin_right = 400.0
margin_bottom = 40.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Name" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Name"]
margin_right = 372.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Bogardia"

[node name="TextureRect" type="TextureRect" parent="Name"]
margin_left = 376.0
margin_right = 400.0
margin_bottom = 24.0
hint_tooltip = "Warning: No city selected as capital!"
theme = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="Options1" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 400.0
margin_bottom = 52.0

[node name="GovForm" type="OptionButton" parent="Options1"]
margin_right = 198.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 5 )

[node name="Capital" type="OptionButton" parent="Options1"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 5 )

[node name="Options2" type="HBoxContainer" parent="."]
margin_top = 56.0
margin_right = 400.0
margin_bottom = 80.0

[node name="Culture" type="OptionButton" parent="Options2"]
margin_right = 400.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 5 )

[connection signal="item_selected" from="Options1/GovForm" to="." method="_on_GovForm_item_selected"]
[connection signal="item_selected" from="Options1/Capital" to="." method="_on_Capital_item_selected"]
[connection signal="item_selected" from="Options2/Culture" to="." method="_on_Culture_item_selected"]
